Fix overflow

--- a/styles/typography.css
+++ b/styles/typography.css
@@ -336,6 +336,7 @@ table {
   height: 100vh;
   display: block;
   margin-left: auto;
+  overflow-y: scroll;
   margin-right: auto;
   counter-reset: table
 }
